--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,160 +21,86 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     
-    env:
-      FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
-      FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-      FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
-      FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-      FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
-      FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
-      FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
-      FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
-    
     steps:
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
-      - name: 🔐 Validate Firebase Secrets
+      - name: 🔐 Validate GitHub Secrets
+        env:
+          FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+          FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+          FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+          FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+          FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+          FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+          FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
         run: |
           echo "🔐 Проверка Firebase Secrets..."
           
-          # Проверяем наличие через bash-переменные
-          echo "✅ FIREBASE_API_KEY: $(echo $FIREBASE_API_KEY | wc -c) символов"
-          echo "✅ FIREBASE_AUTH_DOMAIN: $(echo $FIREBASE_AUTH_DOMAIN | wc -c) символов"
-          echo "✅ FIREBASE_DATABASE_URL: $(echo $FIREBASE_DATABASE_URL | wc -c) символов"
-          echo "✅ FIREBASE_PROJECT_ID: $(echo $FIREBASE_PROJECT_ID | wc -c) символов"
-          echo "✅ FIREBASE_STORAGE_BUCKET: $(echo $FIREBASE_STORAGE_BUCKET | wc -c) символов"
-          echo "✅ FIREBASE_MESSAGING_SENDER_ID: $(echo $FIREBASE_MESSAGING_SENDER_ID | wc -c) символов"
-          echo "✅ FIREBASE_APP_ID: $(echo $FIREBASE_APP_ID | wc -c) символов"
-          echo "✅ FIREBASE_MEASUREMENT_ID: $(echo $FIREBASE_MEASUREMENT_ID | wc -c) символов"
-          
-          # Проверка что все секреты не пустые
-          if [ -z "${FIREBASE_API_KEY}" ]; then
-            echo "❌ FIREBASE_API_KEY: ПУСТОЙ"
+          if [ -z "$FIREBASE_API_KEY" ]; then
+            echo "❌ FIREBASE_API_KEY не установлен"
             exit 1
           fi
-          if [ -z "${FIREBASE_AUTH_DOMAIN}" ]; then
-            echo "❌ FIREBASE_AUTH_DOMAIN: ПУСТОЙ"
-            exit 1
-          fi
-          if [ -z "${FIREBASE_DATABASE_URL}" ]; then
-            echo "❌ FIREBASE_DATABASE_URL: ПУСТОЙ"
-            exit 1
-          fi
-          if [ -z "${FIREBASE_PROJECT_ID}" ]; then
-            echo "❌ FIREBASE_PROJECT_ID: ПУСТОЙ"
-            exit 1
-          fi
-          if [ -z "${FIREBASE_STORAGE_BUCKET}" ]; then
-            echo "❌ FIREBASE_STORAGE_BUCKET: ПУСТОЙ"
-            exit 1
-          fi
-          if [ -z "${FIREBASE_MESSAGING_SENDER_ID}" ]; then
-            echo "❌ FIREBASE_MESSAGING_SENDER_ID: ПУСТОЙ"
-            exit 1
-          fi
-          if [ -z "${FIREBASE_APP_ID}" ]; then
-            echo "❌ FIREBASE_APP_ID: ПУСТОЙ"
-            exit 1
-          fi
-          if [ -z "${FIREBASE_MEASUREMENT_ID}" ]; then
-            echo "❌ FIREBASE_MEASUREMENT_ID: ПУСТОЙ"
+          if [ -z "$FIREBASE_PROJECT_ID" ]; then
+            echo "❌ FIREBASE_PROJECT_ID не установлен"
             exit 1
           fi
           
-          echo "✅ ВСЕ СЕКРЕТЫ ПРИСУТСТВУЮТ И ЗАПОЛНЕНЫ"
+          echo "✅ ВСЕ СЕКРЕТЫ ПРИСУТСТВУЮТ"
 
       - name: 🔧 Generate Firebase Config
+        env:
+          FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
+          FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+          FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+          FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
+          FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+          FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+          FIREBASE_MEASUREMENT_ID: ${{ secrets.FIREBASE_MEASUREMENT_ID }}
         run: |
           echo "🔧 Генерация firebase-config.js..."
           
-          # Создаем конфиг с реальными значениями из переменных окружения
-          cat > firebase-config.js << 'CONFIG'
-          // ====================================================
-          // 🔥 FIREBASE CONFIG - GENERATED FROM GITHUB SECRETS
-          // ====================================================
-          
+          cat > firebase-config.js << 'EOF'
           console.log('🚀 Загрузка Firebase конфигурации...');
           
           const firebaseConfig = {
-            apiKey: "$FIREBASE_API_KEY",
-            authDomain: "$FIREBASE_AUTH_DOMAIN",
-            databaseURL: "$FIREBASE_DATABASE_URL",
-            projectId: "$FIREBASE_PROJECT_ID",
-            storageBucket: "$FIREBASE_STORAGE_BUCKET",
-            messagingSenderId: "$FIREBASE_MESSAGING_SENDER_ID",
-            appId: "$FIREBASE_APP_ID",
-            measurementId: "$FIREBASE_MEASUREMENT_ID"
+            apiKey: "${FIREBASE_API_KEY}",
+            authDomain: "${FIREBASE_AUTH_DOMAIN}",
+            databaseURL: "${FIREBASE_DATABASE_URL}",
+            projectId: "${FIREBASE_PROJECT_ID}",
+            storageBucket: "${FIREBASE_STORAGE_BUCKET}",
+            messagingSenderId: "${FIREBASE_MESSAGING_SENDER_ID}",
+            appId: "${FIREBASE_APP_ID}",
+            measurementId: "${FIREBASE_MEASUREMENT_ID}"
           };
           
-          console.group('📊 Firebase Configuration:');
-          console.log('✅ Проект:', firebaseConfig.projectId);
-          console.log('✅ Auth Domain:', firebaseConfig.authDomain);
-          console.log('✅ Database:', firebaseConfig.databaseURL);
-          console.groupEnd();
-          
+          console.log('✅ Firebase Config:', firebaseConfig.projectId);
           window.firebaseConfig = firebaseConfig;
-          console.log('✅ Конфигурация сохранена в window.firebaseConfig');
-          
-          if (typeof module !== 'undefined' && module.exports) {
-            module.exports = firebaseConfig;
-          }
-          CONFIG
-          
-          # Заменяем переменные в файле
-          envsubst < firebase-config.js > firebase-config-temp.js
-          mv firebase-config-temp.js firebase-config.js
-          
-          echo "✅ Конфиг создан"
-          echo "🔍 Проверка конфига:"
-          head -15 firebase-config.js
-          echo "..."
-          tail -5 firebase-config.js
-
-      - name: 🔧 Install envsubst (if needed)
-        run: |
-          echo "🔧 Установка envsubst..."
-          sudo apt-get update
-          sudo apt-get install -y gettext-base
-
-      - name: 📄 Create GitHub Pages Files
-        run: |
-          echo "📄 Создание вспомогательных файлов..."
-          touch .nojekyll
-          
-          cat > robots.txt << 'EOF'
-          User-agent: *
-          Allow: /
-          Sitemap: https://askhat707.github.io/trading-data/sitemap.xml
           EOF
+          
+          echo "✅ Config создан"
+          head -3 firebase-config.js
 
-      - name: 📁 Verify Build Structure
+      - name: 📄 Create Support Files
         run: |
-          echo "📁 Проверка структуры файлов..."
-          echo "Содержимое каталога:"
-          ls -la
-          echo ""
-          echo "Проверка файлов:"
-          test -f "index.html" && echo "✅ index.html присутствует" || echo "❌ index.html отсутствует"
-          test -f "firebase-config.js" && echo "✅ firebase-config.js присутствует" || echo "❌ firebase-config.js отсутствует"
-          echo ""
-          echo "Содержимое firebase-config.js (первые 5 строк):"
-          head -5 firebase-config.js
-          echo ""
-          echo "Проверка наличия API Key в конфиге:"
-          if grep -q 'apiKey: "AIza' firebase-config.js; then
-            echo "✅ API Key найден (начинается с AIza)"
-          else
-            echo "⚠️  API Key имеет другой формат"
-            grep 'apiKey:' firebase-config.js | head -1
-          fi
+          touch .nojekyll
+          echo "✅ .nojekyll создан"
 
-      - name: 📦 Upload Pages Artifact
+      - name: 📁 Verify Structure
+        run: |
+          echo "📁 Проверка структуры:"
+          test -f "index.html" && echo "✅ index.html" || echo "❌ index.html отсутствует"
+          test -f "firebase-config.js" && echo "✅ firebase-config.js" || echo "❌ firebase-config.js отсутствует"
+          test -f ".nojekyll" && echo "✅ .nojekyll" || echo "❌ .nojekyll отсутствует"
+          ls -la js/modules/auth.js
+
+      - name: 📦 Upload to Pages
         uses: actions/upload-pages-artifact@v3
         with:
           path: .
 
-      - name: 🚀 Deploy to GitHub Pages
+      - name: 🚀 Deploy
         id: deployment
         uses: actions/deploy-pages@v4
